--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -35,16 +35,19 @@
       margin-left: 12px;
       &-fullname{
         margin-bottom: 0;
-        color: $text-color;
+        color: $color-primary;
         @include font-size(14px);
       }
       &-email{
-        color: $gray4;
+        color: $color-primary;
         @include font-size(13px);
       }
       &-picto{
         height: 24px;
         margin-left: 20px;
+        .svg-fill{
+          fill: $color-primary;
+        }
       }
     }
   }
@@ -56,6 +59,7 @@
     background-color: $color-white;
     box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
     z-index: 1;
+    transition: all .4s ease-out;
     &::before{
       content: "";
       position: absolute;
