#385 - largeur du menu 'droits' lors de l'invitation d'un user

--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -160,7 +160,7 @@
         left: 0;
 
         @include media-breakpoint-up(xl) {
-          width: 167px;
+          width: 100%;
         }
 
         ul{
