--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -42,6 +42,7 @@
   padding: $grid-gutter-width;
   max-width: 216px;
   height: 275px;
+  cursor: pointer;
   @include flex-direction(column);
   @include transition(all .25s ease);
   &-move{ @include transition(all 600ms ease-in-out 50ms); }
@@ -56,7 +57,7 @@
   &-enter{ @include transform(scale(0.9)); }
 
   &:hover {
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 10px 0 rgba($color-black, .3);
   }
 }
 
