--- a/src/assets/scss/component/base-components/_base-upload-area.scss
+++ b/src/assets/scss/component/base-components/_base-upload-area.scss
@@ -56,7 +56,7 @@ $base-upload-area: 'upload-area';
     }
   }
   .uppy-Dashboard-browse{
-    color: $gray4 !important;
+    color: $color-text !important;
     text-decoration: underline;
   }
   .uppy-c-btn-primary{
