--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -6,6 +6,7 @@
   @include bm-box-shadow;
   &__container{
     height: 100%;
+    padding: 0 1.8rem;
     @include flexbox;
     @include align-items(center);
     @include justify-content(space-between);
@@ -37,7 +38,7 @@
       content: '';
       position: absolute;
       left: 0;
-      bottom: -6px;
+      bottom: -4px;
       background-color: $color-primary;
       opacity: 0;
       @include transition(.3s ease all);
