--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -52,10 +52,10 @@
     }
   }
   &__d{
-    width: -webkit-fill-available;
+    width: 216px;
     position: absolute;
     top: 65px;
-    right: -10px;
+    right: 0px;
     background-color: $color-white;
     box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
     z-index: 1;
@@ -66,7 +66,7 @@
       height: 15px;
       width: 15px;
       background-color: $color-white;
-      right: 7%;
+      right: 4%;
       top: -10%;
       transform: rotate(45deg);
       box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
