--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -369,6 +369,11 @@
     width: 100%;
     z-index: 1;
 
+    &--big {
+      height: 50px;
+      padding: 15px 35px;
+  }
+
     &__close {
       position: absolute;
       right: 12px;
@@ -381,6 +386,7 @@
       background: $danger;
     }
   }
+  
   &-modal {
     .close {
       position: absolute;
