Make the menus displaying on top when we are at an element at the end of the user list

--- a/src/assets/scss/component/_users-list.scss
+++ b/src/assets/scss/component/_users-list.scss
@@ -212,6 +212,9 @@
       .base-button-option__menu {
         top: -75px;
       }
+      .new_folder_box {
+        top: -35px !important;
+      }
     }
     &.role-changed {
       animation: opacityblink 2s infinite;
