--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -77,7 +77,7 @@
       background-color: $color-white;
     }
   }
-  .profile-item, .logout-item{
+  .profile-item, .connect-item, .logout-item{
     padding: 7px 18px;
     cursor: pointer;
     color: $text-color;
