Managing uploading files list, fix i18n mistake, manage upload cancels,

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -36,6 +36,7 @@
 @import "component/base-components/base-checkbox-material";
 @import "component/base-components/base-button-option";
 @import "component/project-item";
+@import "component/uploading-ifc-item";
 @import "component/dms/dms_breadcrumb";
 @import "component/dms/dms";
 
