--- a/src/assets/scss/component/base-components/_base-upload-area.scss
+++ b/src/assets/scss/component/base-components/_base-upload-area.scss
@@ -2,6 +2,10 @@ $base-upload-area: 'upload-area';
 
 .#{$base-upload-area} {
 
+  .uppy-DragDrop-input {
+    display: none;
+  }
+
   .uppy-StatusBar:not([aria-hidden=true]).is-waiting {
     background: $white;
   }
