Add the BucketWindow component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -35,6 +35,7 @@
 @import "component/base-components/base-tree-select";
 @import "component/base-components/base-checkbox-material";
 @import "component/base-components/base-button-option";
+@import "component/base-components/base-bucket-window";
 @import "component/project-item";
 @import "component/uploading-ifc-item";
 @import "component/dms/dms_breadcrumb";
