add new sccs file for MODAL style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -29,6 +29,7 @@
 @import "component/base-components/base-model-preview";
 @import "component/base-components/base-input-radio";
 @import "component/base-components/base-input-text-material";
+@import "component/base-components/base-modal";
 @import "component/base-components/base-search-bar";
 @import "component/base-components/base-bd-table";
 @import "component/base-components/base-button-tool";
