--- a/src/assets/scss/component/base-components/_base-upload-area.scss
+++ b/src/assets/scss/component/base-components/_base-upload-area.scss
@@ -1,7 +1,7 @@
 $base-upload-area: 'upload-area';
 
 .#{$base-upload-area} {
-  margin-top: 5px;
+  margin-bottom: -5px;
 
   .uppy-DragDrop-input {
     display: none;
