--- a/src/assets/scss/pages/_viewer.scss
+++ b/src/assets/scss/pages/_viewer.scss
@@ -3,9 +3,12 @@
 For the full copyright and license information, please view the LICENSE
 file that was distributed with this source code. */
 .viewer {
-  .main{
+  .main {
     padding: 0;
     height: calc(100vh - #{$header-height});
     flex: 1 0 auto;
+    label {
+      margin: 0;
+    }
   }
 }
