--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -2,13 +2,15 @@
 (c) BIMData support@bimdata.io
 For the full copyright and license information, please view the LICENSE
 file that was distributed with this source code. */
-.header{
+.header {
   padding: $grid-gutter-width $grid-gutter-width * 2;
   height: $header-height;
   position: relative;
+  color: $color-primary;
   background-color: $color-white;
+  z-index: 1;
   @include bm-box-shadow;
-  &__container{
+  &__container {
     height: 100%;
     @include flexbox;
     @include align-items(center);
@@ -16,39 +18,40 @@ file that was distributed with this source code. */
   }
 }
 
-.logo-container{
+.logo-container {
   flex-basis: $header-height;
   @include flexbox;
   @include align-items(center);
   @include justify-content(center);
 }
 
-.navigation{
+.navigation {
   @include flexbox;
   @include align-items(stretch);
   @include justify-content(center);
-  &__item{
+  &__item {
     padding: $grid-gutter-width;
     display: block;
     position: relative;
     text-decoration: none;
     @include align-items(center);
     @include align-self(stretch);
-    &:after{
+    &:after {
       width: 100%;
       height: 3px;
       display: inline-block;
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       bottom: -6px;
       background-color: $color-primary;
       opacity: 0;
-      @include transition(.3s ease all);
+      @include transition(0.3s ease all);
     }
-    &:hover, &.active{
+    &:hover,
+    &.active {
       text-decoration: none;
-      &:after{
+      &:after {
         opacity: 1;
       }
     }
