--- a/src/assets/scss/component/_loader.scss
+++ b/src/assets/scss/component/_loader.scss
@@ -2,6 +2,10 @@
 (c) BIMData support@bimdata.io
 For the full copyright and license information, please view the LICENSE
 file that was distributed with this source code. */
+.loader {
+  position: initial;
+  background-color: transparent;
+}
 /* custom LOADER ------------------------ */
 .loader-platform {
   position: absolute;
