change bg-color for tool card

--- a/src/assets/scss/component/base-components/_base-button-option.scss
+++ b/src/assets/scss/component/base-components/_base-button-option.scss
@@ -39,7 +39,7 @@ $base-button-option: 'base-button-option';
       @include transition(.15s linear all);
     }
     &:hover{
-      background-color: $color-white;
+      background-color: rgba($color-text,.2);
       transition: all .2s cubic-bezier(.35,0,.25,1);
     }
   }
