add min-width for picto into ged

--- a/src/assets/scss/component/dms/_dms.scss
+++ b/src/assets/scss/component/dms/_dms.scss
@@ -185,6 +185,9 @@ $width-lg-tree: 300px;
       min-width: 47%;
       &__name{
         cursor: pointer;
+        svg{
+          min-width: 20px;
+        }
       }
     }
     .table-type{
