--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -56,7 +56,7 @@ file that was distributed with this source code. */
     }
   }
   &__d{
-    width: -webkit-fill-available;
+    width: auto;
     position: absolute;
     top: 65px;
     right: -10px;
@@ -71,7 +71,7 @@ file that was distributed with this source code. */
       width: 15px;
       background-color: $color-white;
       right: 7%;
-      top: -7%;
+      top: -5%;
       transform: rotate(45deg);
       box-shadow: 0 2px 10px 0 rgba($color-black,0.1);
       z-index: -1;
@@ -81,7 +81,7 @@ file that was distributed with this source code. */
       background-color: $color-white;
     }
   }
-  .profile-item, .connect-item, .logout-item{
+  .profile-item, .connect-item, .switch-item, .logout-item{
     padding: 7px 18px;
     cursor: pointer;
     color: $text-color;
@@ -94,6 +94,11 @@ file that was distributed with this source code. */
     &:hover{
       background-color: $color-background;
     }
+  }
+  .switch-item{
+    height: 33px;
+    display: flex;
+    align-items: center;
   }
   .logout-item{
    svg{
