--- a/src/assets/scss/component/_project-item.scss
+++ b/src/assets/scss/component/_project-item.scss
@@ -177,6 +177,7 @@ file that was distributed with this source code. */
     top: 6px;
     right: 0;
     left: 0;
+    z-index: 1;
     @include flexbox;
     @include align-items(center);
     @include justify-content(space-between);
