add user icon if no firstname or lastname

--- a/src/assets/scss/layout/_header_user_menu.scss
+++ b/src/assets/scss/layout/_header_user_menu.scss
@@ -13,7 +13,9 @@ file that was distributed with this source code. */
     width: $pic-size;
     height: $pic-size;
     min-width: $pic-size;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
     background-color: $color-primary;
     color: $color-white;
